<resources>
    <string name="app_name">TetherShot</string>
    <string name="no_camera">Chưa kết nối máy ảnh</string>
    <string name="connect_camera">Kết nối máy ảnh</string>
    <string name="disconnect">Ngắt kết nối</string>
    <string name="no_camera_found">Không tìm thấy máy ảnh PTP qua USB. Hãy cắm máy ảnh và chọn chế độ PC/PTP trên máy ảnh.</string>
    <string name="usb_permission_denied">Bạn cần cấp quyền USB để kết nối máy ảnh.</string>
    <string name="preset_section">Preset (LUT .cube)</string>
    <string name="preset_hint">Chọn preset</string>
    <string name="import_lut">Thêm LUT (.cube)</string>
    <string name="delete_preset">Xoá preset</string>
    <string name="delete_preset_confirm">Xoá preset \"%1$s\"?</string>
    <string name="auto_export">Tự động xuất file khi chụp</string>
    <string name="export_count">Đã xuất: %1$d ảnh (Pictures/TetherShot)</string>
    <string name="process_image">Xử lý ảnh từ bộ nhớ (thử preset)</string>
    <string name="preview_section">Ảnh mới nhất</string>
    <string name="edit_section">Chỉnh sửa</string>
    <string name="filter_hint">Chọn filter</string>
    <string name="slider_exposure">Phơi sáng</string>
    <string name="slider_contrast">Tương phản</string>
    <string name="slider_saturation">Bão hoà màu</string>
    <string name="slider_temperature">Nhiệt độ màu</string>
    <string name="slider_skin_smooth">Làm mịn da</string>
    <string name="slider_grain">Grain (hạt phim)</string>
    <string name="reset_edits">Đặt lại chỉnh sửa</string>
    <string name="batch_process">Batch: xử lý nhiều ảnh cùng lúc</string>
</resources>
